# rhasspy-tts-cli-hermes

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.in  README.md  configure  configure.ac  requirements.txt  rhasspy-tts-cli-hermes.in  rhasspytts_cli_hermes.spec  setup.py
.github/workflows/: deploy.yml  tests.yml
debian/DEBIAN/: control
rhasspytts_cli_hermes/: __init__.py  __main__.py  utils.py
scripts/: build-docker.sh  download-dependencies.sh
